# internal/transport/http/openapi.gen.go
@@ -47,6 +47,9 @@ type GetRateByCurrencyParams struct {
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
 
+	// (GET /api/v1/health)
+	HealthCheck(c *fiber.Ctx) error
+
 	// (GET /api/v1/rates)
 	GetAllRates(c *fiber.Ctx, params GetAllRatesParams) error
 
@@ -60,6 +63,12 @@ type ServerInterfaceWrapper struct {
 }
 
 type MiddlewareFunc fiber.Handler
+
+// HealthCheck operation middleware
+func (siw *ServerInterfaceWrapper) HealthCheck(c *fiber.Ctx) error {
+
+	return siw.Handler.HealthCheck(c)
+}
 
 // GetAllRates operation middleware
 func (siw *ServerInterfaceWrapper) GetAllRates(c *fiber.Ctx) error {
@@ -137,6 +146,8 @@ func RegisterHandlersWithOptions(router fiber.Router, si ServerInterface, option
 	for _, m := range options.Middlewares {
 		router.Use(fiber.Handler(m))
 	}
+
+	router.Get(options.BaseURL+"/api/v1/health", wrapper.HealthCheck)
 
 	router.Get(options.BaseURL+"/api/v1/rates", wrapper.GetAllRates)
 
